# audio_visualizer

./: .gitignore  README.md  package.json
cpp_prototype_2/: CMakeLists.txt  dependencies.md  main.cpp  portaudio.cpp  test.cpp
src/: App.jsx  CanvasComponent.jsx
src/components/: Icosahedron.jsx
src/shaders/: shaders.jsx
web_prototype_1/: package-lock.json
web_prototype_1/src/: App.css  App.jsx
