cmake_minimum_required(VERSION 3.10)
project(Audio_Visualizer)

add_library(glad STATIC
    ${CMAKE_SOURCE_DIR}/include/glad/src/glad.c
)

target_include_directories(glad PUBLIC
    ${CMAKE_SOURCE_DIR}/glad/include
)

add_executable(main test.cpp)

target_include_directories(main PRIVATE
    ${CMAKE_SOURCE_DIR}/include/glad/include
    ${CMAKE_SOURCE_DIR}/include/
)

target_link_libraries(main PRIVATE glad glfw raylib portaudio)

